--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/organicfood
+# MONGO_URI=mongodb://localhost:27017/organicfood
 # MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGOHOST}:27017
-# MONGO_URI="mongodb+srv://mrashokkumawat015:fjUsz46dm6m8gisz@organicfood.e0qs3pm.mongodb.net/OrganicFood?retryWrites=true&w=majority"
+MONGO_URI="mongodb+srv://mrashokkumawat015:fjUsz46dm6m8gisz@organicfood.e0qs3pm.mongodb.net/OrganicFood?retryWrites=true&w=majority"
 3
 # --apiVersion 1 --username mrashokkumawat015 --password fjUsz46dm6m8gisz'
 JWT_SECRET=yourSuperSecretKey
