--- a/.env
+++ b/.env
@@ -12,9 +12,12 @@ REDIS_PASSWORD=ATWcAAIjcDFlNGU2NjZkNWUxZjk0MTdhYjBmOGEwMzE2NWNmY2FlOXAxMA
 REDIS_HOST=frank-hornet-13724.upstash.io
 UPSTASH_REDIS_REST_URL="https://frank-hornet-13724.upstash.io"
 UPSTASH_REDIS_REST_TOKEN="ATWcAAIjcDFlNGU2NjZkNWUxZjk0MTdhYjBmOGEwMzE2NWNmY2FlOXAxMA"
+GOOGLE_CALLBACK_URL=https://organic-food-api.onrender.com/api/auth/google/callback
+FACEBOOK_CALLBACK_URL=https://organic-food-api.onrender.com/api/auth/facebook/callback
 
 SwaggerUI=http://localhost:5000/api-docs
 BaseAPI=http://localhost:5000/api
+
 CLOUDINARY_CLOUD_NAME=dpxvet5ra
 CLOUDINARY_API_KEY=377414842864851
 CLOUDINARY_API_SECRET=YkSj3b5fiDhX7sHM3WNeQJ9w9P4
