--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "swagger": "node swagger/swagger.js"
+    "start": "concurrently \"npm run server\" \"npm run swagger-watch\"",
+    "server": "nodemon server.js",
+    "swagger-gen": "node swagger/swagger.js",
+    "swagger-watch": "nodemon --watch api/routes --watch api/controllers --watch swagger/swagger.js --ext js,json --exec \"npm run swagger-gen\""
   },
   "keywords": [],
   "author": "",
@@ -41,10 +42,12 @@
     "routing-controllers": "^0.11.2",
     "routing-controllers-openapi": "^5.0.0",
     "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "concurrently": "^9.2.0",
     "nodemon": "^3.1.10"
   }
 }
