--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "class-validator": "^0.14.2",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
+    "google-auth-library": "^10.1.0",
     "helmet": "^8.1.0",
+    "http-errors": "^2.0.0",
     "ioredis": "^5.6.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
