--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "razorpay": "^2.9.6",
     "redis": "^5.1.0",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.11.2",
